# prompt-gauntlet

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/classification/: sentiment.jsonl
data/convergence/: rubrics.yaml
data/tool_use/: corpus.jsonl
examples/: report.md  sample_trace.jsonl  scorecard.csv  scorecard.json
src/promptbench/: __init__.py  __main__.py  cli.py  config.py  types.py
src/promptbench/adapters/: __init__.py  base.py  local.py  mock.py  openai_compat.py
src/promptbench/engine/: __init__.py  prompter.py  replay.py  runner.py  trace.py
src/promptbench/grading/: __init__.py  pareto.py  report.py  scorer.py
src/promptbench/judges/: __init__.py  constraint.py  embedding.py  ensemble.py  rubric.py
src/promptbench/scenarios/: base.py  registry.py
src/promptbench/tools/: __init__.py  base.py  calculator.py  filestore.py  search.py
src/promptgauntlet/: __init__.py  __main__.py  cli.py  config.py  types.py
src/promptgauntlet/adapters/: __init__.py  base.py  local.py  mock.py  openai_compat.py
src/promptgauntlet/engine/: __init__.py  prompter.py  replay.py  runner.py  trace.py
src/promptgauntlet/grading/: pareto.py  report.py  scorer.py  stats.py
src/promptgauntlet/judges/: __init__.py  base.py  constraint.py  embedding.py  ensemble.py  rubric.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_engine.py  test_grading.py  test_judges.py  test_scenarios_classification.py  test_scenarios_constraint.py  test_scenarios_convergence.py  test_scenarios_tool_use.py  test_tools.py
(+19 files in other folders)
