[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptbench"
version = "0.1.0"
description = "A reproducible, model-agnostic Prompt Aptitude Test Suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "rich>=13.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
judges = ["sentence-transformers>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = ["promptbench[openai,judges,dev]"]

[project.scripts]
promptbench = "promptbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/promptbench"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/", "configs/", "data/"]
